# atdd-framework

./: .env.example  .gitignore  CHANGELOG.md  PROYECTO.md  README.md  dispatcher_langgraph.py  docker-compose.yml  install.sh  projects.yml.example  pyproject.toml
atf-ai/: CHANGELOG.md  README.md  behave.ini  json.output  migrate.py  pretty.output  pyproject.toml  setup.py
atf-ai/.atdd/: MIGRATION.md  SCOPE.md  SPEC.md  STACK.md  STATE.md  atf.config.json
atf-ai/.atdd/backlog/US01-scaffolding-cli/: story.md
atf-ai/.atdd/backlog/US02-docker-runner/: acceptance.feature  story.md
atf-ai/.atdd/backlog/US03-screenplay-actors-steps/: prompt.md  story.md
atf-ai/.atdd/backlog/US04-feedback-state-tracking/: story.md
atf-ai/.atdd/backlog/US05-reports-pipeline-pypi/: acceptance.feature  story.md
atf-ai/.atdd/sprints/sprint_01/: SCOPE.md  SPEC.md  STATE.md  stories.md
atf-ai/.atdd/sprints/sprint_02/: SCOPE.md  SPEC.md  STATE.md  stories.md
atf-ai/.atdd/sprints/sprint_03/: SCOPE.md  SPEC.md  STATE.md  stories.md
atf-ai/.atdd/sprints/sprint_04/: SCOPE.md  SPEC.md  STATE.md  stories.md
atf-ai/.atdd/sprints/sprint_05/: SCOPE.md  SPEC.md  STATE.md  stories.md
atf-ai/.atf/: SCOPE.md  SPEC.md  STATE.md  atf-state.json  environment.py  steps
atf-ai/.atf/prompts/sprint_01/: acceptance.feature
atf-ai/.atf/prompts/sprint_02/: prompt.md
atf-ai/.github/workflows/: publish.yml
atf-ai/atf/: __init__.py  cli.py  config.py  environment.py  feedback.py  fixtures.py  runner.py  state.py
atf-ai/atf/interactions/: __init__.py  call_an_api.py
atf-ai/atf/steps/: form_steps.py
atf-ai/reports/sprint_01/: index.html  results.json
atf-ai/reports/sprint_02/: index.html  results.json
atf-ai/reports/sprint_03/: index.html  results.json
atf-ai/reports/sprint_04/: index.html  results.json
atf-ai/reports/sprint_05/: index.html  results.json
atf-ai/tests/: __init__.py  test_cli.py
(+61 files in other folders)
